Summoner page now shows more information, from summary (+ prevent line break in search bar on the index page)

--- a/src/main/resources/static/styles/summoner.css
+++ b/src/main/resources/static/styles/summoner.css
@@ -39,3 +39,11 @@
     height: auto;
     padding: 5px;
 }
+
+#info  p {
+    color: red;
+}
+
+#info > p > span {
+    color: white;
+}
